# wiki

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
about/: index.html
about/history/: index.html
assets/javascripts/: bundle.c8b220af.min.js
docs/: CNAME  index.md  test.md
docs/about/: history.md  index.md
docs/editor/tools/: Sculpt.md  Shade.md
docs/guides/: index.md  working_with_embeds.md
docs/home/: index.md
docs/skin_editor/tools/: brush.md  eraser.md  index.md  paint_bucket.md  sculpt.md  shade.md
docs/troubleshooting/: help!_my_colors_are_inaccurate.md  inaccurate_colors.md
editor/tools/Brush/: index.html
editor/tools/Eraser/: index.html
editor/tools/Paint Bucket/: index.html
editor/tools/Sculpt/: index.html
editor/tools/Shade/: index.html
guides/: index.html
guides/working_with_embeds/: index.html
home/: index.html
home/test/: index.html
index/: index.html
index/test/: index.html
overrides/: main.html
skin_editor/tools/: index.html
skin_editor/tools/brush/: index.html
skin_editor/tools/eraser/: index.html
skin_editor/tools/paint_bucket/: index.html
skin_editor/tools/sculpt/: index.html
skin_editor/tools/shade/: index.html
stylesheets/: extra.css
test/: index.html
troubleshooting/help!_my_colors_are_inaccurate/: index.html
troubleshooting/inaccurate_colors/: index.html
